# site_analysis

./: .dockerignore  .gitignore  .smoke.sqlite3  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.claude/: settings.json
apps/analysis/: admin.py  apps.py  constants.py  exceptions.py  filters.py  signals.py  tasks.py  throttling.py  urls.py
apps/api_v1/: urls.py
apps/audits/: admin.py  apps.py  constants.py  exceptions.py  filters.py  signals.py  throttling.py  urls.py
apps/common/: exceptions.py  middleware.py  models.py  pagination.py  permissions.py  throttling.py  utils.py  validators.py
apps/credits/: admin.py  apps.py  constants.py  exceptions.py  signals.py  urls.py
apps/full_report/: admin.py  apps.py  constants.py  explanations.py  labels.py  models.py  recommendations.py  serializers.py  tasks.py  urls.py  views.py
apps/gtmetrix/: admin.py  apps.py  constants.py  exceptions.py  filters.py  signals.py  tasks.py  urls.py
apps/linkchecker/: admin.py  apps.py  constants.py  exceptions.py  filters.py  models.py  selectors.py  serializers.py  services.py  tasks.py  throttling.py  urls.py  views.py
apps/users/: apps.py  (+11 more)
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh  nginx.conf
docs/: FULL_REPORT_API.md  openapi.json  openapi.yaml
postman/: PageSpeed_Analyzer.postman_collection.json  PageSpeed_Analyzer.postman_environment.json
requirements/: base.txt  development.txt  production.txt  test.txt
templates/: api_tester.html
(+178 files in other folders)
