[project]
name = "site-analysis-api"
version = "0.1.0"
description = "Production-grade Website/SEO analysis REST API."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "DJ", "SIM", "RUF"]
ignore = ["B008"]  # DRF/Django default arguments call functions intentionally.

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
addopts = "--reuse-db --strict-markers -ra"
testpaths = ["apps"]

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "*/admin.py", "*/apps.py"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
exclude = ["migrations"]

[tool.django-stubs]
django_settings_module = "config.settings.development"
